fix: didn't push the css to stop name overlap with cards for some reason.

--- a/src/frontend/styles/game.css
+++ b/src/frontend/styles/game.css
@@ -167,7 +167,7 @@ body.game-page {
   transform-origin: top center;
 }
 
-.game-page .opponent-top .playing-card + .playing-card {
+.game-page .opponent-top .playing-card {
   margin-left: -50px;
 }
 
@@ -210,7 +210,7 @@ body.game-page {
   flex-direction: column;
   transform: scale(0.7);
   transform-origin: center;
-  margin-top: 10px;
+  margin-top: 50px;
 }
 
 .game-page .opponent-left .playing-card, 
